Implementacion del Listar Admin para  el Componente ReservaEstacionamiento

--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -138,10 +138,18 @@
       <li><a href="reportes/cant-reservas-por-tipoPago">Cantidad de reservas por tipo de pago</a></li>
       <li><a href="reportes/cant-reservas-por-usuario">Cantidad de reservas por usuario</a></li>
     </ul>
+
+    <input type="checkbox" class="menu-toggle" id="menu13">
+    <label for="menu13" class="menu">
+      <i class="material-icons">directions_car</i> Reserva Estacionamiento
+      <mat-icon class="icon-down">arrow_drop_down</mat-icon>
+      <mat-icon class="icon-up">arrow_drop_up</mat-icon>
+    </label>
+    <ul class="sub-menu">
+      <li><a href="reservaestacionamiento/listar_admin_reserva_estacionamientos">Listar reservas</a></li>
+    </ul>
   </div>
   
-
-
 </body>
 
 </html>
