--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
@@ -1,1 +1,55 @@
-<p>listar-admin-comentario works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <h2>Lista Comentarios</h2>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+          
+            <!-- Position Column -->
+            <ng-container matColumnDef="codigo">
+              <th mat-header-cell *matHeaderCellDef> No. </th>
+              <td mat-cell *matCellDef="let element"> {{element.idComentario}} </td>
+            </ng-container>
+          
+            <!-- Name Column -->
+            <ng-container matColumnDef="contenido">
+              <th mat-header-cell *matHeaderCellDef> Contenido </th>
+              <td mat-cell *matCellDef="let element"> {{element.contenido}} </td>
+            </ng-container>
+          
+            <!-- Weight Column -->
+            <ng-container matColumnDef="valoracion">
+              <th mat-header-cell *matHeaderCellDef> Valoracion </th>
+              <td mat-cell *matCellDef="let element"> {{element.valoracion}} </td>
+            </ng-container>
+          
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="fechacreacion">
+              <th mat-header-cell *matHeaderCellDef> Fecha de creacion </th>
+              <td mat-cell *matCellDef="let element"> {{element.fechaCreacion}} </td>
+            </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="idUsuario">
+                <th mat-header-cell *matHeaderCellDef> id de la reserva</th>
+                <td mat-cell *matCellDef="let element"> {{element.reservaEstacionamiento.idReservaEstacionamiento}} </td>
+              </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+          <mat-paginator
+          [pageSizeOptions]="[5, 10, 25, 100]"
+          showFirstLastButtons
+        ></mat-paginator>
+        <br>
+          
+    </div>
+</body>
+</html>
