--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -87,8 +87,9 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li><a href="listar_horario/registrar_vehiculos">Registrar comentarios</a></li>
-      <li><a href="listar_horario">Listar comentarios</a></li>
+      <li><a href="comentarios/registrar_comentarios">Registrar comentarios</a></li>
+      <li><a href="comentarios/listar_comentarios_admin">Listar comentarios</a></li>
+      <li><a href="comentarios">Buscar comentarios</a></li>
     </ul>
 
     <input type="checkbox" class="menu-toggle" id="menu9">
