Avance CreaEdita de Reserva Estacionamiento

--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -146,10 +146,13 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
+      <li><a href="reservaestacionamiento/registrar_reservas_estacionamientos">Registrar reservas</a></li>
       <li><a href="reservaestacionamiento/listar_admin_reserva_estacionamientos">Listar reservas</a></li>
+      
     </ul>
   </div>
   
 </body>
 
 </html>
+
