--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
@@ -1,1 +1,86 @@
-<p>creaedita-reserva-estacionamiento works!</p>
+<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="container_contenido">
+    <div class="container" style="text-align: center">
+      <h2>Registro de Reserva Estacionamiento</h2>
+      <form [formGroup]="form" (submit)="aceptar()" class="example-form">
+        <mat-form-field class="example-full-width">
+          <mat-label>Estado</mat-label>
+          <mat-select formControlName="estado">
+            <mat-option *ngFor="let p of estado" [value]="p.value">
+              {{p.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="obtenerControlCampo('estado')?.errors?.['required']">
+            El estado es obligatorio.
+          </mat-error>
+        </mat-form-field>
+        <br />
+        <mat-form-field appearance="fill" class="example-full-width">
+          <input matInput placeholder="Ingrese fecha" [matDatepicker]="picker" formControlName="fecha"
+            [max]="maxFecha" />
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <mat-error *ngIf="obtenerControlCampo('fecha')?.errors?.['required']">
+            La fecha es obligatoria.
+          </mat-error>
+        </mat-form-field>
+        <br />
+        <mat-form-field appearance="fill" class="example-full-width">
+          <mat-label>Usuario</mat-label>
+          <mat-select formControlName="users">
+            <mat-option *ngFor="let p of listaUsuario" [value]="p.idUsuario">
+              {{ p.idUsuario }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="obtenerControlCampo('users')?.errors?.['required']">
+            El usuario es obligatorio.
+          </mat-error>
+        </mat-form-field>
+        <br />
+        <mat-form-field appearance="fill" class="example-full-width">
+          <mat-label>Vehiculo</mat-label>
+          <mat-select formControlName="vehiculo">
+            <mat-option *ngFor="let p of listaVehiculo" [value]="p.idVehiculo">
+              {{ p.idVehiculo }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="obtenerControlCampo('vehiculo')?.errors?.['required']">
+            El vehiculo es obligatorio.
+          </mat-error>
+        </mat-form-field>
+        <br />
+        <mat-form-field appearance="fill" class="example-full-width">
+          <mat-label>Horario Estacionamiento</mat-label>
+          <mat-select formControlName="horarioEstacionamiento">
+            <mat-option *ngFor="let p of listaHorarioEst" [value]="p.idHorarioEstacionamiento">
+              {{ p.idHorarioEstacionamiento }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="obtenerControlCampo('horarioEstacionamiento')?.errors?.['required']">
+            El horario es obligatorio.
+          </mat-error>
+        </mat-form-field>
+        <br />
+        <button mat-raised-button color="primary">Registrar</button>
+        <button mat-raised-button color="warn" routerLink="/listar">
+          CANCELAR
+        </button>
+      </form>
+    </div>
+  </div>
+</body>
+
+</html>
+<app-footer></app-footer>
