Avance Pago y Rol

--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -45,6 +45,7 @@
     </label>
     <ul class="sub-menu">
       <li><a href="roles/registrar_roles">Registrar roles</a></li>
+      <li><a href="roles/listar-admin-roles">Listar roles (admin)</a></li>    
     </ul>
     <input type="checkbox" class="menu-toggle" id="menu5">
     <label for="menu5" class="menu">
@@ -98,8 +99,8 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li><a href="listar_horario/registrar_vehiculos">Registrar pagos</a></li>
-      <li><a href="listar_horario">Listar pagos</a></li>
+      <li><a href="pagos/registrar_pagos">Registrar pagos</a></li>
+      <li><a href="pagos/listar-admin-pagos">Listar pagos (admin)</a></li>
     </ul>
 
     <input type="checkbox" class="menu-toggle" id="menu10">
