--- a/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
@@ -12,42 +12,28 @@
 
     <body>
         <div class="litle">
-            <h2 style="text-align: center">LISTA DE PAGOS</h2>
+            <h2 style="text-align: center">LISTA DE ROLES</h2>
         </div>
 
         <div class="container">
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                
-                <ng-container matColumnDef="idPago">
+                <ng-container matColumnDef="idRol">
                     <th mat-header-cell *matHeaderCellDef>Id</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.idPago }}
+                        {{ element.idRol }}
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="fechaEmision">
-                    <th mat-header-cell *matHeaderCellDef>Fecha de emisión</th>
-                    <td mat-cell *matCellDef="let element">{{ element.fechaEmision }}</td>
+                <ng-container matColumnDef="nombreRol">
+                    <th mat-header-cell *matHeaderCellDef>Rol</th>
+                    <td mat-cell *matCellDef="let element">{{ element.nombreRol }}</td>
                 </ng-container>
 
-                <ng-container matColumnDef="precioTotal">
-                    <th mat-header-cell *matHeaderCellDef>Precio Total</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.precioTotal }}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="tipoPago">
-                    <th mat-header-cell *matHeaderCellDef>Metodo de Pago</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.tipoPago }}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="reservaEstacionamiento">
+                <ng-container matColumnDef="usuario">
                     <th mat-header-cell *matHeaderCellDef>Usuario</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.reservaEstacionamiento.idReservaEstacionamiento }}
+                        {{ element.usuario.nombre }}
                     </td>
                 </ng-container>
 
@@ -80,4 +66,3 @@
 
 </div>
 <app-footer></app-footer>
-<router-outlet></router-outlet>
