--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/horario-estacionamiento.component.html
@@ -1,1 +1,4 @@
-<p>horario-estacionamiento works!</p>
+<div [hidden]="route.children.length !== 0">
+  <app-navbar></app-navbar>
+</div>
+<router-outlet></router-outlet>
