--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <app-navbar></app-navbar>
+
     <div class="litle">
       <h2 style="text-align: center">LISTA DE HORARIO - ESTACIONAMIENTO</h2>
     </div>
@@ -47,5 +49,6 @@
         showFirstLastButtons
       ></mat-paginator>
     </div>
+    <app-footer></app-footer>
   </body>
 </html>
