--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.html
@@ -1,16 +1,12 @@
-<div [hidden]="route.children.length !== 0">
-  <app-navbar></app-navbar>
-  <!DOCTYPE html>
-  <html lang="en">
-
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-
   <body>
-    s
+    <app-navbar></app-navbar>
 
     <div>
       <h2 style="text-align: center">LISTA DE LOCALIZACIONES</h2>
@@ -30,10 +26,17 @@
             <p>Latitud: {{ element.latitud }}</p>
             <p>Longitud: {{ element.longitud }}</p>
           </div>
-          <div id="map_{{ element.idLocalizacion }}" style="height: 200px"></div>
+          <div
+            id="map_{{ element.idLocalizacion }}"
+            style="height: 200px"
+          ></div>
           <div class="card-footer">
-           
-            <button mat-icon-button class="material-icons app-toolbar-menu" matTooltip="" color="warn">
+            <button
+              mat-icon-button
+              class="material-icons app-toolbar-menu"
+              matTooltip=""
+              color="warn"
+            >
               AGREGAR
             </button>
           </div>
@@ -42,7 +45,4 @@
     </div>
     <app-footer></app-footer>
   </body>
-
-  </html>
-  <router-outlet></router-outlet>
-</div>
+</html>
