--- a/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
@@ -54,7 +54,7 @@
                 <ng-container matColumnDef="accion01">
                     <th mat-header-cell *matHeaderCellDef>Modificar</th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idLocalizacion]">
+                        <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idPago]">
                             Actualizar
                         </button>
                     </td>
@@ -62,7 +62,7 @@
                 <ng-container matColumnDef="accion02">
                     <th mat-header-cell *matHeaderCellDef>Eliminar</th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="warn" (click)="eliminar(element.idLocalizacion)">
+                        <button mat-raised-button color="warn" (click)="eliminar(element.idPago)">
                             Eliminar
                         </button>
                     </td>
@@ -79,5 +79,4 @@
     </html>
 
 </div>
-<app-footer></app-footer>
 <router-outlet></router-outlet>
