--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -46,6 +46,7 @@
     <ul class="sub-menu">
       <li><a href="roles/registrar_roles">Registrar roles</a></li>
       <li><a href="roles/listar-admin-roles">Listar roles (admin)</a></li>    
+      <li><a href="roles/buscar-roles">Bucar roles</a></li>   
     </ul>
     <input type="checkbox" class="menu-toggle" id="menu5">
     <label for="menu5" class="menu">
@@ -101,8 +102,8 @@
     <ul class="sub-menu">
       <li><a href="pagos/registrar_pagos">Registrar pagos</a></li>
       <li><a href="pagos/listar-admin-pagos">Listar pagos (admin)</a></li>
+      <li><a href="pagos/buscar-pagos">Buscar pagos</a></li>
     </ul>
-
     <input type="checkbox" class="menu-toggle" id="menu10">
     <label for="menu10" class="menu">
       <i class="material-icons">assignment_turned_in</i> Reservas
