--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.css
@@ -7,7 +7,10 @@
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 800px;
-  margin: 0 auto;
+  margin: 100px auto; /* Centrar horizontalmente */
+  flex-direction: column;
+  justify-content: center; /* Centrar verticalmente */
+  align-items: center; /* Centrar horizontalmente */
 }
 
 .form-group label {
