Actualizacion CSS de Rol y Pago

--- a/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
@@ -16,6 +16,11 @@
         </div>
 
         <div class="container">
+
+            <mat-form-field>
+                <input style="text-align: left" matInput (keyup)=filter($event) placeholder="buscar"/>
+              </mat-form-field>
+
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                
                 <ng-container matColumnDef="idPago">
