--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
@@ -2,6 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
+    padding: 20px;
 }
 
 .container {
@@ -15,6 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     /* Centra verticalmente */
+    margin-top: 80px;
 }
 
 
