--- a/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
@@ -16,8 +16,14 @@
         </div>
 
         <div class="container">
+
+            <mat-form-field>
+                <input style="text-align: left" matInput (keyup)=filter($event) placeholder="buscar" />
+            </mat-form-field>
+
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-               
+
+
                 <ng-container matColumnDef="idRol">
                     <th mat-header-cell *matHeaderCellDef>Id</th>
                     <td mat-cell *matCellDef="let element">
